--- a/texts/latex/includes/uvod.tex
+++ b/texts/latex/includes/uvod.tex
@@ -1,9 +1,9 @@
 \chapter{Úvod}
 
-Zadáním mojí bakalářské práce je vytvoření nástroje primárně pro vývojáře, kteří pracují na projektech hostovaných na jednom z těchto tří verzovacích serverů: Google Code\cite{gcode}, Assembla\cite{assembla} a GitHub\cite{github}. Nástroj ale poslouží i ostatním vývojářům, byť nejsou primární cílovou skupinou. Využití najde i u neprogramátorů, a to u těch kteří svůj čas organizují metodikou \uv{Getting Things Done}\cite{gtd:web}. Hlavním přínosem mojí práce je usnadnění práce vývojářům, kteří pro správu projektů používají jednu z výše zmíněných služeb. 
+Zadáním mojí bakalářské práce je vytvoření nástroje primárně pro vývojáře, kteří pracují na projektech hostovaných na jednom z těchto tří verzovacích serverů: Google Code\cite{gcode}, Assembla\cite{assembla} a GitHub\cite{github}. Nástroj ale poslouží i ostatním vývojářům, byť nejsou primární cílovou skupinou. Využití najde i u neprogramátorů, a to u těch, kteří svůj čas organizují metodikou \uv{Getting Things Done}\cite{gtd:web}. Hlavním přínosem mojí práce je usnadnění práce vývojářům, kteří pro správu projektů používají jednu z výše zmíněných služeb. 
 
-Hlavní motivací pro vytvoření této aplikace je snaha usnadnit práci vedoucím týmů, kteří paralelně pracují na více projektech. Tato činnost se může časem stát hodně nepřehlednou protože jsou úkoly roztroušeny na více místech a člověk pak může něco přehlédnout. Aplikace dobře poslouží i samostatným a junior vývojářům. Poskytne jim přehledy dokončených úkolů za aktuální den, týden a měsíc. Zároveň mají možnost nastavit si datum splnění (deadline) úkolů, což ne všechny verzovací servery umožňují. Snadno se tak dozví, kdy už jim dochází čas na splnění konkrétního úkolu. Na světě ale nejsou jen vývojáři, proto je aplikace schopná spravovat i obyčejné projekty, které nejsou nijak svázané s některým z verzovacích systémů. Protože ale tito uživatelé nejsou primární skupinou, pro kterou je aplikace určena, tak na trhu najdou vhodnější nástroje.
+Hlavní motivací pro vytvoření této aplikace je snaha usnadnit práci vedoucím týmů, kteří paralelně pracují na více projektech. Tato činnost se může časem stát hodně nepřehlednou, protože jsou úkoly roztroušeny na více místech. Aplikace dobře poslouží i samostatným vývojářům a junior vývojářům. Poskytne jim přehledy dokončených úkolů za aktuální den, týden a měsíc. Zároveň mají možnost nastavit si datum splnění (deadline) úkolů, což ne všechny verzovací servery umožňují. Snadno se tak dozví, kdy jim dochází čas na splnění konkrétního úkolu. Na světě ale nejsou jen vývojáři, proto je aplikace schopná spravovat i obyčejné projekty, které nejsou nijak svázané s některým z verzovacích systémů. Protože ale běžní uživatelé nejsou primární skupinou, pro kterou je aplikace určena, určitě najdou na~trhu vhodnější nástroje.
 
-Aplikace bude kompletně vytvořena za pomocí vývojového prostředí Titanium Studio\cite{titanium} v rámci platformy \slash frameworku Titanium. Výstupem práce bude kromě samotné aplikace i rešerše této platformy a zhodnocení práce s ní. Jedním z cílů této práce je ověření toho, zda je tato platforma použitelná a zda má smysl se ní nějak hlouběji zabývat.
+Aplikace bude kompletně vytvořena za pomocí vývojového prostředí Titanium Studio\cite{titanium} v rámci platformy \slash frameworku Titanium. Výstupem práce bude kromě samotné aplikace i rešerše této platformy a zhodnocení práce s ní. Jedním z cílů této práce je ověření toho, zda je tato platforma použitelná a zda má smysl se jí nějak hlouběji zabývat.
 
-Mým soukromým cílem a snahou je i to, aby tato aplikace neskončila pouze jako bakalářská práce, ale aby se dále rozvíjela a zlepšovala. Myslím, že má svůj potenciál, a pokud se vyladí hlavně vizuální stránka aplikace, má šanci se uchytit. Proto byl založen web \cite{gtdtoolweb}, kde bude tato práce uveřejněna a kde budou ke stažení veškeré zdrojové kódy včetně dokumentace. Moji ambicí je kolem tohoto projektu vytvořit menší komunitu, která pomůže s dalším rozvojem. V Česku také neexistuje žádný web, který by se věnoval platformě Titanium jako takové, tím jsou moje šance ještě větší.
+Mým soukromým cílem a snahou je i to, aby tato aplikace neskončila pouze jako bakalářská práce, ale aby se dále rozvíjela a zlepšovala. Myslím, že má svůj potenciál, a pokud se vyladí hlavně vizuální stránka aplikace, má šanci se uplatnit v praxi. Proto byl založen web \cite{gtdtoolweb}, kde bude tato práce uveřejněna a kde budou ke stažení veškeré zdrojové kódy včetně dokumentace. Moji ambicí je kolem tohoto projektu vytvořit menší komunitu, která pomůže s dalším rozvojem. V Česku také neexistuje žádný web, který by se věnoval platformě Titanium jako takové, tím jsou moje šance ještě větší.
